# Rust

./: gitignore
Anime_Timeline_App/: Cargo.toml  favorites.json  watched.json
Anime_Timeline_App/src/: app.rs  main.rs  storage.rs
Anime_Timeline_App/src/api/: jikan.rs  mod.rs  models.rs
Lab 2/src/: main.rs
Lab 3/: Cargo.toml
Lab 3/src/: bonus.rs  main.rs
Lab 4/src/: hosts.txt  main.rs  p3.txt  rot13.txt
Lab 5/: Cargo.toml
Lab 5/data/: p3.json
Lab 5/src/: life.rs  main.rs
Lab 6/: Cargo.toml
Lab 6/data/: file.txt
Lab 6/src/: main.rs
Lab 7/src/: main.rs
Lab1/src/: main.rs
